[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/disappear_block/disappear_blcok.gd" type="Script" id=1]
[ext_resource path="res://scenes/disappear_block/disappear_block.png" type="Texture" id=2]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="Animation" id=2]
resource_name = "disappear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1, 0, 1, 0 ]
}

[node name="DisppearBlock" type="StaticBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
disappear_time = 1.0
resume_time = 2.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
hframes = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource( 1 )

[node name="DisappearTimer" type="Timer" parent="."]

[node name="ResumeTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/disappear = SubResource( 2 )

[connection signal="timeout" from="DisappearTimer" to="." method="_on_DisappearTimer_timeout"]
[connection signal="timeout" from="ResumeTimer" to="." method="_on_ResumeTimer_timeout"]
